# rust-bootcamp-03-macros

./: Cargo.toml  cliff.toml
examples/: auto_deref.rs  enum_macros.rs  my_ready.rs  my_vec.rs
src/: lib.rs
