[package]
name = "macros"
license = "MIT"
edition = "2021"
version = "1.0.0"
authors = ["Daniel Liu <139250065@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.8"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.61", features = ["extra-traits"] }

[dev-dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
proc-macro = true
